--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
           <li><a class="nav-link">Quien soy</a></li>
           <li><a class="nav-link">Mis hobbies</a></li>
-          <li><a class="nav-link">Mis objetivos</a></li>
+          <li><a class="nav-link">contenido</a></li>
         </ul>
       </nav>
     </header>
