--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <nav id="nav-bar">
         <ul>
-          <li><a class="nav-link">Quien soy</a></li>
+          <li><a class="nav-link">Tips</a></li>
           <li><a class="nav-link">Mis hobbies</a></li>
           <li><a class="nav-link">contenido</a></li>
         </ul>
